Stop the <main> covering up the <header>

--- a/home-styles-desktop.css
+++ b/home-styles-desktop.css
@@ -2,10 +2,10 @@ body {
 	overflow-y: hidden;
 }
 main {
-	height: 100%;
+	height: 90%;
 	left: 0;
 	position: absolute;
-	top: 0;
+	top: 10%;
 	width: 100%;
 }
 main, #social-icons {
